adding in existing file

--- a/views/headerHome.ejs
+++ b/views/headerHome.ejs
@@ -12,3 +12,16 @@
     <title>todo-list</title>
 </head>
 <body>
+
+    <nav class="navbar bg-body-tertiary navbar-dark bg-secondary">
+        <div class="container-fluid">
+          <a class="navbar-brand">TODO List</a>
+          <form action = "/logout" method ="post">
+
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Out</button>
+
+          </form>
+          
+        </div>
+        
+      </nav>
